[tool.poetry]
name = "sum-two-numbers"
version = "0.1.0"
description = ""
authors = ["Rueben Ramirez <ruebenramirez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pytest = "^8.3.2"
mypy = "^1.11.1"
pytest-mypy = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
